--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,6 +55,27 @@ body {
 .nav.navbar-top-links a {
   font-size: 1rem !important;
 }
+.nav .dropdown-toggle {
+  background: transparent !important;
+}
+.nav .profile-icon {
+  display: none;
+}
+.nav .profile-name {
+  width: 80%;
+  word-break: break-word;
+  line-height: initial;
+}
+.nav .round-circle-2 {
+  display: none;
+}
+.nav .dropdown-menu .name {
+  text-align: center;
+  padding: 10px 1rem;
+  background-color: #094e9d;
+  color: #fff;
+  display: none;
+}
 
 .navbar-minimalize {
   background: #094e9d !important;
@@ -132,6 +153,24 @@ body {
 .mini-navbar #side-menu li a:not(.dropdown-item) i {
   margin-right: 0;
 }
+.mini-navbar .dropdown-menu .name {
+  display: block;
+}
+.mini-navbar .profile-name {
+  display: none !important;
+}
+.mini-navbar .dropdown-toggle:after {
+  bottom: 0;
+  top: auto;
+  right: 30px;
+}
+.mini-navbar .round-circle-1 {
+  display: none;
+}
+.mini-navbar .round-circle-2 {
+  display: block !important;
+  padding: 1rem 0;
+}
 
 .nav.navbar-right .btn-logout {
   color: #948b96 !important;
@@ -170,15 +209,12 @@ body {
 }
 .template-loan .navbar-minimalize:hover {
   background: #467111 !important;
-  color: #fff;
 }
 .template-loan .nav li a:hover, .template-loan .nav li a:focus {
   background: #467111 !important;
-  color: #fff;
 }
 .template-loan .nav li.active {
   background: #467111 !important;
-  color: #fff;
 }
 .template-loan .nav li.active > a {
   border-left-color: #9ed35a !important;
@@ -214,6 +250,29 @@ body {
 }
 .template-trace .nav li.active > a {
   border-left-color: #3a8cdd !important;
+}
+
+.template-wharf .nav-header {
+  background-color: #3a8cdd !important;
+}
+.template-wharf .navbar-default {
+  background-color: #3a8cdd !important;
+}
+.template-wharf .navbar-minimalize {
+  background: #3a8cdd !important;
+  border-color: #3a8cdd !important;
+}
+.template-wharf .navbar-minimalize:hover {
+  background: #2272c2 !important;
+}
+.template-wharf .nav li a:not(.dropdown-toggle):hover, .template-wharf .nav li a:not(.dropdown-toggle):focus {
+  background: #2272c2 !important;
+}
+.template-wharf .nav li.active {
+  background: #2272c2 !important;
+}
+.template-wharf .nav li.active > a {
+  border-left-color: #164c81 !important;
 }
 
 .footer .copyright {
