update wharf ui

--- a/resources/sass/pages/_wharf.scss
+++ b/resources/sass/pages/_wharf.scss
@@ -665,6 +665,10 @@
         .item {
           padding: 10px 0;
           border-top: 1px solid $gray;
+
+          &:first-child {
+            border-top: 0;
+          }
         }
       }
 
