--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1965,6 +1965,9 @@ body {
   padding: 10px 0;
   border-top: 1px solid #eee;
 }
+.template-wharf .order-list .order-item .tabulation .item:first-child {
+  border-top: 0;
+}
 .template-wharf .order-list .order-item .table-scroll {
   /*width:100%; */
   display: block;
