--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1712,6 +1712,9 @@ body {
           transform: translateX(50px);
   padding: 0 1rem;
   color: #fff;
+  z-index: 1;
+  -webkit-box-shadow: 1px 1px 10px rgba(58, 140, 221, 0.2);
+          box-shadow: 1px 1px 10px rgba(58, 140, 221, 0.2);
 }
 .template-wharf .cart-float i {
   color: #fff;
@@ -1894,8 +1897,28 @@ body {
   padding: 10px;
   border: 0;
 }
+@media (max-width: 500px) {
+  .template-wharf .order-list .order-item .card-header a {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
 .template-wharf .order-list .order-item .card-header a h5 {
   font-size: 1rem;
+}
+@media (max-width: 500px) {
+  .template-wharf .order-list .order-item .card-header a .right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+  }
 }
 .template-wharf .order-list .order-item .card-header a .right i {
   margin-left: 1rem;
@@ -1921,11 +1944,24 @@ body {
 .template-wharf .order-list .order-item .card-body .cart-list .cart-item .cart-product-imitation {
   margin-right: 1rem;
 }
+@media (max-width: 500px) {
+  .template-wharf .order-list .order-item .card-body .cart-list .cart-item .column-2 {
+    margin: 1rem 0;
+  }
+}
 .template-wharf .order-list .order-item .card-body .status-list .status-item {
   background-color: #eee;
   padding: 5px 1rem;
   border-radius: 50px;
   font-size: 0.9rem;
+}
+@media (max-width: 500px) {
+  .template-wharf .order-list .order-item .card-body .status-list .status-item {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin-bottom: 12px;
+  }
 }
 .template-wharf .order-list .order-item .card-body .status-list .status-item.text-green {
   background-color: #9ed35a;
@@ -2023,4 +2059,30 @@ body {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+}
+.template-wharf .status-history .order-placed {
+  background-color: #fef4ea !important;
+}
+.template-wharf .status-history .payment-verified, .template-wharf .status-history .delivered {
+  background-color: #e7f8ee !important;
+}
+.template-wharf .status-history .order-approved {
+  background-color: #d3f2e0 !important;
+}
+.template-wharf .status-history .on-delivery {
+  background-color: #fdf1f0 !important;
+}
+.template-wharf .proof-of-payment .group {
+  margin-bottom: 1rem;
+}
+.template-wharf .proof-of-payment .group .label {
+  background-color: transparent;
+  font-size: 0.9rem;
+  padding: 0;
+  color: #ccc;
+}
+.template-wharf .proof-of-payment .group .value {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #548714;
 }
