--- a/resources/sass/pages/_wharf.scss
+++ b/resources/sass/pages/_wharf.scss
@@ -796,6 +796,18 @@
         color: $primary-2;
       }
     }
+
+    .img-thumbnail {
+      width: 100%;
+      height: 150px;
+      display: block;
+      margin: auto;
+
+      @media (max-width: 500px) {
+        width: 50%;
+        margin-left: 0;
+      }
+    }
   }
 
 }
