--- a/resources/sass/pages/_wharf.scss
+++ b/resources/sass/pages/_wharf.scss
@@ -298,6 +298,11 @@
     width: 70%;
     text-align: center;
     transition: .5s;
+    box-shadow: 1px 1px 10px rgba($black, .2);
+
+    @media (max-width: 1600px) {
+      width: 75%;
+    }
 
     @media (max-width: 500px) {
       border-radius: 0;
@@ -807,6 +812,96 @@
         width: 50%;
         margin-left: 0;
       }
+    }
+  }
+
+  .banner-section {
+    .banner-container {
+      min-height: 300px;
+      background-size: cover;
+      background-position: center;
+    }
+  }
+
+  .marketplace-container {
+    width: 99%;
+    margin: auto;
+    margin-top: -3rem;
+    margin-bottom: 2rem;
+    background-color: rgba($white, .9);
+    padding: 1rem 0;
+    box-shadow: 1px 1px 10px rgba($black, .1);
+  }
+
+  .filters {
+    .form-group {
+      border-top: 1px solid $gray-2;
+      padding: 1rem 0;
+
+      &:first-child {
+        border-top: 0;
+      }
+
+      label {
+        font-weight: bold;
+      }
+
+      ul {
+        padding: 0;
+        margin-bottom: 0;
+        list-style: none;
+
+        li {
+          margin-bottom: 10px;
+          cursor: pointer;
+
+          .gr {
+            display: flex;
+            align-items: center;
+          }
+
+          img {
+            background-color: #ccc;
+            padding: 10px;
+            border-radius: 50%;
+            margin-right: 10px;
+            transition: .3s;
+          }
+
+          & > ul {
+            display: block;
+
+            li {
+              position: relative;
+              transition: .3s;
+              padding-left: 4rem;
+
+              &:before {
+                content: '';
+                position: absolute;
+                width: 30px;
+                background-color: $gray-2;
+                height: 2px;
+                top: 50%;
+                transform: translateY(-50%);
+                left: 20px;
+              }
+
+              &:hover {
+                opacity: .8;
+              }
+            }
+          }
+
+          &:hover {
+            img {
+              background-color: $primary-1;
+            }
+          }
+
+        }
+      }
+
     }
   }
 
