--- a/resources/sass/pages/_wharf.scss
+++ b/resources/sass/pages/_wharf.scss
@@ -299,6 +299,7 @@
     text-align: center;
     transition: .5s;
     box-shadow: 1px 1px 10px rgba($black, .2);
+    display: none !important;
 
     @media (max-width: 1600px) {
       width: 75%;
