update wharf ui

--- a/resources/sass/pages/_wharf.scss
+++ b/resources/sass/pages/_wharf.scss
@@ -824,7 +824,7 @@
       @media (max-width: 992px) {
         background-size: contain;
         background-repeat: no-repeat;
-        min-height: 200px;
+        //min-height: 200px;
       }
     }
   }
