--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2105,7 +2105,32 @@ body {
     margin-left: 0;
   }
 }
+.template-wharf .banner-section .tagline {
+  background-color: #094e9d;
+  color: #fff;
+  padding: 1rem;
+  -webkit-box-shadow: -1px -1px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: -1px -1px 10px rgba(0, 0, 0, 0.2);
+  display: none;
+}
+.template-wharf .banner-section .tagline h1, .template-wharf .banner-section .tagline h3 {
+  margin: 0;
+  text-transform: uppercase;
+}
+.template-wharf .banner-section .tagline h1 {
+  font-size: 3.2rem;
+  font-weight: bold;
+  line-height: 40px;
+  border-bottom: 1px solid #fff;
+  padding: 10px 0;
+  margin-bottom: 10px;
+}
+.template-wharf .banner-section .tagline h3 {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
 .template-wharf .banner-section .banner-container {
+  position: relative;
   min-height: 300px;
   background-size: cover;
   background-position: center;
@@ -2116,6 +2141,15 @@ body {
     background-repeat: no-repeat;
     min-height: 200px;
   }
+}
+.template-wharf .banner-section .banner-container .tagline {
+  position: absolute;
+  width: 40%;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  display: block;
 }
 .template-wharf .marketplace-container {
   width: 99%;
