--- a/resources/sass/pages/_wharf.scss
+++ b/resources/sass/pages/_wharf.scss
@@ -816,7 +816,35 @@
   }
 
   .banner-section {
+    .tagline {
+      background-color: $primary-4;
+      color: $white;
+      padding: 1rem;
+      box-shadow: -1px -1px 10px rgba($black, .2);
+      display: none;
+
+      h1, h3 {
+        margin: 0;
+        text-transform: uppercase;
+      }
+
+      h1 {
+        font-size: 3.2rem;
+        font-weight: bold;
+        line-height: 40px;
+        border-bottom: 1px solid $white;
+        padding: 10px 0;
+        margin-bottom: 10px;
+      }
+
+      h3 {
+        font-size: 1.2rem;
+        font-weight: 400;
+      }
+
+    }
     .banner-container {
+      position: relative;
       min-height: 300px;
       background-size: cover;
       background-position: center;
@@ -826,7 +854,18 @@
         background-repeat: no-repeat;
         min-height: 200px;
       }
+
+      .tagline {
+        position: absolute;
+        width: 40%;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        display: block;
+      }
+
     }
+
   }
 
   .marketplace-container {
